# baksnapper

./: CHANGELOG.md  CONTRIBUTE.md  ChangeLog  Makefile  PKGBUILD  README.md  REUSE.toml  baksnapper.sh  baksnapperd-common.sh  baksnapperd-denotebak.sh  baksnapperd.sh  guix.scm  latest-bash  meson.build  meson_options.txt
.github/workflows/: makefile.yml  reuse.yml  test.yml
.reuse/: dep5
CHANGELOG.d/: 20250418T165705--meson_support__added.md  20250601T123921--summary_report__added.md  20250602T185240--properly_split_delete_list__fixed.md  20250604T192225--test_runner__added.md  20250606T144102--migrate-changelog-to-keep-a-changelog__changed.md  20250609T191210--backing-up-snapshot-with-wrong-parent__fixed.md  20250621T155824--version-short-does-not-work__fixed.md  20250928T200407--deprecate-config-option__deprecated.md  20250928T200445--add-source-dest-feature__added.md  20250928T202816--add-source-dest-options__added.md  20250928T203013--change-private-key__changed.md  20251116T160332--rename-create-config-to-create-location__changed.md  20251116T170044--add-denotebak-backend__added.md  20251126T213311--set-version-from-mesonmake__changed.md
build-aux/: PKGBUILD  compile-baksnapperd.sh  version
systemd/: baksnapper-ssh@.service  baksnapper-ssh@.timer  baksnapper@.service  baksnapper@.service.in  baksnapper@.service.template  baksnapper@.timer  example.bsconf
tests/: runner.scm
